# hui_miner

./: CMakeLists.txt  README.md  config.json  global.cpp  global.h  input.cpp  input.h  main.cpp
algo/: efim.cpp  efim.h  fhm.cpp  fhm.h  hui_algo.h  hui_miner.cpp  hui_miner.h
data/: database.cpp  database.h  itemset.cpp  itemset.h  projected_transaction.cpp  projected_transaction.h  transaction.cpp  transaction.h  utility_list.cpp  utility_list.h  utility_list_element.cpp  utility_list_element.h
tool/: common.h  config_loader.cpp  config_loader.h  global.cpp  global.h  input.cpp  input.h  logger.cpp  logger.h
